Misthalin Mystery: minor polish (#1908)
* polish

* modernize

* reformat: move definitions to their own lines & make their types proper